API Key Handled

--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "license": "ISC",
   "packageManager": "pnpm@10.27.0",
   "dependencies": {
+    "dotenv": "^17.3.1",
     "newman": "^6.2.2",
     "newman-reporter-htmlextra": "^1.23.1"
   }
